# backupninja

./: .gitignore  AUTHORS  CHANGELOG.md  ChangeLog  FAQ.md  INSTALL.md  Makefile.am  Makefile.in  NEWS  PATCHES.md  README.md  README_tests.md  RELEASE.md  TODO  Vagrantfile  autogen.sh  backupninja.spec  backupninja.spec.in  configure  configure.ac  configure.in
debian/: NEWS  backupninja.examples  backupninja.lintian-overrides  backupninja.postinst  backupninja.preinst  changelog  control  copyright  rules
debian/patches/: series  unbreak-AC_PATH_PROG-bash.patch
debian/source/: lintian-overrides
etc/: Makefile.in  backupninja.conf.in
examples/: Makefile.am  Makefile.in  example.borg  example.dup  example.ldap  example.maildir  example.makecd  example.mysql  example.pgsql  example.rdiff  example.restic  example.rsync  example.svn  example.sys  example.trac
handlers/: Makefile.am  Makefile.in  borg  borg.helper.in  borg.in  dsync.in  dup.helper.in  dup.in  ldap.in  makecd.in  mysql.helper.in  mysql.in  pgsql.helper.in  pgsql.in  rdiff.helper.in  rdiff.in  restic  restic.helper.in  restic.in  rsync.in  svn.in  sys.helper.in  sys.in  tar.in  wget
lib/: Makefile.am  Makefile.in  parseini.in
man/: Makefile.in  backup.d.5  backupninja.1  backupninja.conf.5  ninjahelper.1
src/: Makefile.am  Makefile.in  backupninja.in  ninjahelper.in
test/: backupninja.bats  borg.bats  common.bash  dup.bats  mysql.bats  pgsql.bats  rdiff.bats  restic.bats  rsync.bats  sh.bats  sys.bats  tar.bats  test.sh
